# shipping-cost-analysis

./: Makefile  README.md  Readme.md  pyproject.toml  requirements-dev.txt
data/: dim_products.csv:Zone.Identifier  ecommerce_shipping_data.xlsx
models/: schema.py
notebooks/: EDA.ipynb  ETL.ipynb  Modelling.ipynb  etl.ipynb
src/shipping_cost_analysis/etl/: create_tables.py  db_tools.py  file_io.py  preprocessing.py
src/shipping_cost_analysis/models/: schema.py  state_mapping.py
